[package]
name = "nanodb"
version = "0.1.0"
edition = "2021"

[lib]
name = "nanodb"
crate-type = ["cdylib"] # Required for PyO3 to build a Python extension

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
memmap2 = "0.9"       # For zero-copy memory mapping
bytemuck = { version = "1.14", features = ["derive"] } # For zero-copy struct casting